--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
@@ -112,7 +112,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
     <script src="{{ asset('bundles/knpbundles/js/jquery.hotkeys.js') }}"></script>
     <script src="{{ asset('bundles/knpbundles/js/jquery.ba-viewportoffset.min.js') }}"></script>
-    <script src="{{ asset('bundles/knpbundles/js/keyboard.navigation.js') }}"></script>
+    <script src="{{ asset('bundles/knpbundles/js/main.js') }}"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     </body>
 </html>
