--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
@@ -81,12 +81,12 @@
                     </dd>
                 </dl>
                 <dl>
-                    <dt><a href="http://knplabs.com">Knp Labs</a></dt>
+                    <dt><a href="http://knplabs.com">KnpLabs</a></dt>
                     <dd>
                         <ul>
                             <li><a href="http://knplabs.com/training/symfony2">Symfony training (World)</a></li>
                             <li><a href="http://knplabs.fr/formation/symfony2" hreflang="fr" lang="fr">Formation Symfony (France)</a></li>
-                            <li><a href="http://knplabs.co.uk/training/symfony2">Symfony training (UK)</a></li>
+                            <li><a href="http://knplabs.co.uk/training/symfony2">Symfony training in London</a></li>
 
                             <li><a href="http://twitter.com/knplabs">Knp on Twitter</a></li>
                             <li><a href="http://behat.org">Behat: BDD framework for PHP</a></li>
@@ -94,7 +94,7 @@
                     </dd>
                 </dl>
                 <dl class="right">
-                    <dt>KnpBundles</dt>
+                    <dt>{% trans %}credits.title{% endtrans %}</dt>
                     <dd>
                         <li><a href="http://knplabs.com">{% trans %}credits.lead_dev{% endtrans %}</a></li>
                         <ul style="font-size: 11px; ">
