Fix disqus identifier

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Repo/show.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Repo/show.html.twig
@@ -65,7 +65,7 @@
     
     <div id="disqus_thread"></div>
     <script type="text/javascript">
-        var disqus_shortname = 'kb';
+        var disqus_shortname = 's2b';
         {% if app.environment == 'dev' %}
         var disqus_developer = 1;
         {% endif %}
