--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/public/css/style.css
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/public/css/style.css
@@ -119,7 +119,8 @@ h1 {
 #knplabs { position: absolute; top: 12px; right: 15px;}
 #knplabs img { width: 45px;}
 #promo { position: absolute; font-size: 13px; right: 0; top: 10px;}
-#promo a {display: block; color: #fff; text-decoration: none; font-family: Arial;}
+#promo a.img { position: absolute; }
+#promo .bulle { background: #fff; margin-left: 90px; border-radius: 2px; -moz-border-radius: 2px; -webkit-border-radius: 2px; color: #000; padding: 5px; }
 #promo a .external {color: #EDB443; }
 #promo a:hover {color: #EDB443;}
 
