--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
@@ -33,12 +33,9 @@
                 <img src="{{ asset('bundles/knpbundles/images/knpbundles.png') }}" alt="Knp Bundles: {{ 'header.baseline'|trans }}" />
                 <div id="baseline">{{ 'header.baseline'|trans }}</div>
             </a>
-            
-            <div id="promo">
-                <a href="{{ 'menu.urls.training'|trans }}">{{ 'menu.training'|trans }}</a>
-                <a href="{{ 'menu.urls.consulting'|trans }}">{{ 'menu.consulting'|trans }}</a>
-                <a href="{{ 'menu.urls.knplabs'|trans }}">{{ 'menu.knplabs'|trans }}</a>
-            </div>
+
+            {% render 'KnpBundlesBundle:Main:banner' %}
+
             {{ knp_menu_render(knp_menu_get('main').setAttribute('id', 'menu')) }}
         </div>
     </div><!-- /#header -->
@@ -77,6 +74,8 @@
                         <ul>
                             <li><a href="https://github.com/knplabs/knpbundles">{% trans %}footer.code{% endtrans %}</a></li>
                             <li><a href="{{ path('api') }}">API</a></li>
+                            <li><a href="{% trans %}footer.symfony2bundles.url{% endtrans %}">{% trans %}footer.symfony2bundles.label{% endtrans %}</a></li>
+                            
                         </ul>
                     </dd>
                 </dl>
