--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Main/banner.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Main/banner.html.twig
@@ -1,5 +1,5 @@
 <div id="promo">
-    <a class="img" href="http://knplabs.com"><img src="{{ asset('bundles/knpbundles/images/edgar.png') }}" /></a>
+    <a class="img" href="{{ url }}"><img src="{{ asset('bundles/knpbundles/images/edgar.png') }}" /></a>
     <div class="bulle">
         {{ text|replace({
             '[': '<a href="'~url~'">',
