--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Repo/show.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Repo/show.html.twig
@@ -62,6 +62,9 @@
         </div>
     </div>
     {% endif %}
+    <div id="links">
+        {% include 'KnpBundlesBundle:Repo:links.html.twig' %}
+    </div>
     
     <div id="disqus_thread"></div>
     <script type="text/javascript">
