--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/public/css/style.css
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/public/css/style.css
@@ -638,7 +638,7 @@ h1 {
     #repo-show #links {
         float:left;
         width:628px;
-        margin: 0 0 20px 0px;
+        margin: 0 0 20px 0;
         font-size: 12px;
         padding: 10px;
         background: #fafafa;
