Fix a few typos in previous commit

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/public/css/style.css
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/public/css/style.css
@@ -14,7 +14,7 @@ a{color:#EEB342;}
 .clearfix{display:inline-block;}
 * html .clearfix{height:1%;}
 .clearfix{display:block;}
-/**Ì†ΩÌ¥ç
+/**
 * LAYOUT
 * --------------------
 */
