Added missing translations + translate then into polish and fix some wording

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/listBestScore.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/listBestScore.html.twig
@@ -1,5 +1,5 @@
 <div id="best-scored-bundles">
-    <h2>{% trans %}bundles.best.title{% endtrans %}</h2>
+    <h2>{% trans %}bundles.list.title.best{% endtrans %}</h2>
     <ul class="bundles_list">
         {%- for i, bundle in bundles %}
         <li class="bundle">
