--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/listFeatured.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/listFeatured.html.twig
@@ -1,5 +1,5 @@
 <div id="hot-bundles">
-    <h2>What's hot?</h2>
+    <h2>{% trans %}bundles.list.title.featured{% endtrans %}</h2>
     <ul class="bundles_list">
         {%- for bundle in bundles %}
         <li class="bundle">
