--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/listNewest.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/listNewest.html.twig
@@ -1,5 +1,5 @@
 <div id="newest-bundles">
-    <h2>Newest bundles</h2>
+    <h2>{% trans %}bundles.list.title.newest{% endtrans %}</h2>
     <ul class="bundles_list">
         {%- for i, bundle in bundles %}
         <li class="bundle">
