--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Main/timeline.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Main/timeline.html.twig
@@ -1,4 +1,4 @@
-<h3>Recent commits</h3>
+<h3>{% trans %}bundles.list.recentCommits{% endtrans %}</h3>
 <div class="sidemenu">
     <ol class="timeline">
     {%- for commit in commits %}
