--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Repo/search.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Repo/search.html.twig
@@ -2,15 +2,15 @@
 
 {% block body_attributes %}id="search"{% endblock %}
 
-{% block h1 %}Search{% endblock %}
+{% block h1 %}{% trans %}search.list.title{% endtrans %}{% endblock %}
 
-{% block title %}Search Bundles and Projects{% endblock %}
+{% block title %}{% trans %}search.list.meta.title{% endtrans %}{% endblock %}
 
-{% block description %} Search for Open Source Bundles and Projects{% endblock %}
+{% block description %}{% trans %}search.list.meta.description{% endtrans %}{% endblock %}
 
 {% block content %}
     <div id="main">
-        <p>Please use the search input at the top right.<br />
-        The engine will search in repository name, description and developer name.</p>
+        <p>{% trans %}search.content.description.part1{% endtrans %}<br />
+        {% trans %}search.content.description.part2{% endtrans %}</p>
     </div>
 {% endblock %}
